[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
config = "0.13.3"
redis = { version = "0.23.2", features = ["tokio-comp"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }


[lib]
path = "src/lib.rs"

[[bin]]
name = "rate-limiter"
path = "src/main.rs"
